crates/normalize/tests/snapshots/cli_snapshots__help_edit_delete.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"edit\", \"delete\"])"
---
Delete a symbol.

Usage: normalize edit delete [OPTIONS] [target]

Arguments:
  [target]  Target to edit (path/Symbol)

Options:
      --dry-run                    Dry run - show what would change
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
  -y, --yes                        Skip confirmation
      --exclude <exclude>          Exclude files matching patterns
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --only <only>                Only include files matching patterns
      --multiple                   Allow glob patterns to match multiple symbols
      --output-schema              Print JSON Schema of the subcommand's return type and exit
  -m, --message <message>          Message for shadow history
      --manual                     Emit the reference manual for the command subtree rooted here and exit
  -i, --case-insensitive           Case-insensitive matching
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -r, --root <root>                Root directory
      --each                       Delete from every file matching --only that contains the symbol
  -h, --help                       Print help

With `--each`, deletes the symbol from every file matching `--only` that contains it —
useful for removing a trait method from all implementations at once.

Examples:
normalize edit delete src/lib.rs/my_function              # delete a function
normalize edit delete src/lib.rs/my_function --dry-run    # preview the deletion
normalize edit delete "*/old_method" --each --only "*.rs" # delete from all matching files
