crates/normalize/tests/snapshots/cli_snapshots__help_edit_insert.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"edit\", \"insert\"])"
---
Insert content relative to a symbol.

Usage: normalize edit insert [OPTIONS] [target]

Arguments:
  [target]  Target symbol

Options:
      --content <content>          Content to insert
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
      --at <at>                    Position: before, after, prepend, append
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --dry-run                    Dry run - show what would change
      --jq <jq>                    Filter output through jq expression
      --exclude <exclude>          Exclude files matching patterns
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --only <only>                Only include files matching patterns
      --output-schema              Print JSON Schema of the subcommand's return type and exit
  -m, --message <message>          Message for shadow history
      --manual                     Emit the reference manual for the command subtree rooted here and exit
  -i, --case-insensitive           Case-insensitive matching
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -r, --root <root>                Root directory
      --each                       Apply to every file matching --only that contains the symbol
  -h, --help                       Print help

With `--each`, applies the insert to every file matching `--only` that contains
the symbol — useful for adding a method to all implementations of a trait.

Examples:
normalize edit insert src/lib.rs/MyStruct --content "fn new() {}" --at after
normalize edit insert src/lib.rs/MyStruct --content "use foo;" --at before --dry-run
